@@ -3,7 +3,8 @@
 SUBDIRS = libgsm
 
 AM_CPPFLAGS = $(LUA_INCLUDES)
-AM_LDFLAGS = @SAMPLERATE_LIBS@
+AM_CFLAGS = @SNDFILE_CFLAGS@ @SAMPLERATE_CFLAGS@
+AM_LDFLAGS = @SNDFILE_LIBS@ @SAMPLERATE_LIBS@
 
 # Pass flags from --enable-silent-libtool
 LIBTOOL = @LIBTOOL@ @LIBTOOLFLAGS@
@@ -17,8 +18,8 @@ dist_pkgdata_DATA = skeleff.lua skelform.lua
 formats = 8svx.c adpcm.c adpcm.h adpcms.c adpcms.h aiff.c au.c auto.c avr.c \
 	  cdr.c cvsd.c cvsdfilt.h dat.c flac.c g711.c g711.h g721.c \
 	  g723_16.c g723_24.c g723_40.c g72x.c g72x.h gsm.c hcom.c \
-	  ima_rw.c ima_rw.h maud.c mp3.c nulfile.c prc.c \
-	  raw.c sf.c sfircam.h skelform.c smp.c sndrtool.c sphere.c tx16w.c \
+	  ima_rw.c ima_rw.h maud.c mp3.c nulfile.c prc.c raw.c sf.c \
+	  sfircam.h skelform.c smp.c sndfile.c sndrtool.c sphere.c tx16w.c \
 	  voc.c vorbis.c vox.c wav.c wav.h wve.c xa.c
 
 effects = avg.c band.c bandpass.c biquad.c biquad.h biquadlh.c breject.c \
